--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openrct2-typescript-mod-template",
+  "name": "close-all-windows-openrct2",
   "version": "1.0.0",
   "description": "",
   "main": "",
@@ -15,20 +15,19 @@
     "test:watch": "gulp testWatch",
     "lint": "gulp lint",
     "lint:fix": "gulp lintFix",
-    "init": "gulp init",
     "help": "gulp --tasks",
     "husky:prepare": "husky install"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wisnia74/openrct2-typescript-mod-template.git"
+    "url": "git+https://github.com/Harry-Hopkinson/close-all-windows-openrct2.git"
   },
-  "author": "wisnia74",
+  "author": "Harry Hopkinson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wisnia74/openrct2-typescript-mod-template/issues"
+    "url": "https://github.com/Harry-Hopkinson/close-all-windows-openrct2/issues"
   },
-  "homepage": "https://github.com/wisnia74/openrct2-typescript-mod-template#readme",
+  "homepage": "https://github.com/Harry-Hopkinson/close-all-windows-openrct2#readme",
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.2",
