--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,14 +23,9 @@ jobs:
         with:
           cache: 'npm'
 
-      - name: Download and save latest OpenRCT2 API declaration file
-        run: node ./script/downloadAndSaveApiDeclarationFile.js
-
       - name: Install dependencies
-        run: npm ci
+        run: npm install 
 
       - name: Run build
-        run: npm run build --if-present
+        run: npm run build
 
-      - name: Run tests
-        run: npm test
