--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,15 +2,15 @@ name: Node.js CI
 
 on:
   push:
-    branches: ['master']
+    branches: ["master"]
   pull_request:
-    branches: ['master']
+    branches: ["master"]
 
 jobs:
   build:
     strategy:
       matrix:
-        os-type: ['ubuntu-latest', 'windows-latest', 'macos-latest']
+        os-type: ["ubuntu-latest", "windows-latest", "macos-latest"]
         node-version: [18.x]
 
     runs-on: ${{ matrix.os-type }}
@@ -21,11 +21,10 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
-        run: npm install 
+        run: npm install
 
       - name: Run build
         run: npm run build
-
