--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,13 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          cache: "npm"
-
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
-      - name: Run build
-        run: npm run build
+      - name: Fetch OpenRCT2 API
+        run: cd lib
+             sh FetchOpenRCT2Api.sh
+             cd ..
+      
+      - name: Build Plugin
+        run: yarn build
